--- a/src/app/components/product-details/product-details.component.css
+++ b/src/app/components/product-details/product-details.component.css
@@ -1,21 +1,39 @@
-.img {
-    background: pink;
-    float: left;
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+.img_container {
+    width: 450px;
     height: fit-content;
+    overflow: hidden;
+    margin-left: 20px;
 }
 .details {
-    margin: 0 0 20px 0;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-size: 20px;
+    margin: 0 20px;
+    width: 50%;
+}
+.details > h1 {
+    margin-bottom: 20px;
+    font-size: 30px;
 }
 .price > h2 {
     font-weight: 400;
+    margin-bottom: 20px;
 }
 .color-swatch {
     display: flex;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
+    width: 26px;
+    height: 26px;
+    border: 2px solid #000;
+    margin: 10px 0 20px 0;
+    border-radius: 30px;
+}
+.color-container {
+    padding-top: 20px;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
 }
