--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -5,6 +5,6 @@
 <div *ngFor="let ropa of resultados">
 <h2>{{ropa.nombre}}</h2>
 <p>{{ropa.descripcion}}</p>
-<p>{{ropa.color}}</p>
+<p>{{ropa.colores}}</p>
 <p>{{ropa.precio}}</p>
 </div>
