--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -39,11 +39,11 @@
         <button>Agregar categoría</button>
     </form>
 </div>
-<div class="modal-container" id="create-color-modal">
+<!-- <div class="modal-container" id="create-color-modal">
     <form class="modal" (ngSubmit)="createColor()">
         <label for="color-nombre">Nombre del color</label>
         <input type="text" id="color-nombre" name="colorNombre" [(ngModel)]="colorNombre">
         <input type="color" class="color">
         <button>Agregar color</button>
     </form>
-</div>
+</div> -->
