--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -17,7 +17,7 @@
     <ng-container *ngFor="let product of products">
     <div class="products" routerLink="/details/{{product.id}}">
         <div class="product-img">
-            <img src="{{product.imagen}}" width="200px">
+            <img src="{{product.colores[0].imagenesColor[0].nombre}}" width="200px">
         </div>
         <div class="product-details">
             <h3>{{product.nombre}}</h3>
