--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,14 @@
-<p>contact works!</p>
+<app-header></app-header>
+<body>
+<div class="title">
+    <h1>CONTACTO</h1>
+</div>
+<div class="container">
+    <ul class="contacto-list">
+        <li><i class="fa-solid fa-phone fa-shake"></i>+54 341 999 9999</li>
+        <li><i class="fa-solid fa-envelope fa-shake"></i>consultas@mercaindumentaria.com</li>
+        <li><i class="fa-solid fa-location-dot fa-shake"></i>1340 bis, Juan Pablo II, S2000 Rosario, Santa Fe</li>
+    </ul>
+</div>
+</body>
+<app-footer></app-footer>
