--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,27 @@
+.supercontainer {
+    height: min-content;
+}
+.title {
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin: 30px 0;
+}
+.title::before {
+    background: #eee;
+    flex-grow: 1;
+    height: 1px;
+    content: '';
+    margin: auto 20px auto 20px;
+}
+.title::after{
+    background: #eee;
+    flex-grow: 1;
+    height: 1px;
+    content: '';
+    margin: auto 20px auto 20px;
+}
 .container {
     display: flex;
     justify-content: center;
@@ -12,16 +36,32 @@ form {
     width: 60vw;
     height: 424px;
 }
+label {
+    font-weight: bold;
+    font-size: 18px;
+}
 input {
     padding: 10px;
     margin:  20px 0;
-    font-size: 16px;
+    font-size: 18px;
 }
 .submit {
-    margin-top: 20px;
     width: 30%;
+    padding: 0 20px;
+    height: 10%;
+    font-size: 14px;
     align-self: center;
+    background: radial-gradient(#ffee93, #eab941);
+    color: #000;
+    font-weight: 500;
+    letter-spacing: 2px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    border: none;
+    box-shadow: 10px 8px 20px 0px rgba(0,0,0,0.18);
 }
 .login-errs {
     text-align: center;
+    font-size: 18px;
+    font-weight: 500;
 }
