--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,8 @@
+<app-header></app-header>
+<div class="supercontainer">
+<div class="title">
+    <h1>Iniciar sesión</h1>
+</div>
 <div class="container">
 <form [formGroup]="formLogin" (ngSubmit)="onLogin()" novalidate>
     <label for="nombreUsuario">Nombre de usuario</label>
@@ -10,3 +15,5 @@
     </div>
 </form>
 </div>
+</div>
+<app-footer></app-footer>
