--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,8 @@
 <div class="container">
     <div class="copyright"><i class="fa-regular fa-copyright fa-bounce"></i>Copyright 2023 Merca. Todos los derechos reservados.</div>
-    <div class="created-by">Creado por: Diego</div>
+    <div class="created-by">Creado por
+        <a class="diego" href="https://github.com/Kaxzark" target="_blank">
+            <p style="color: #fcc838;">D</p><p style="color: #2c8fe6;">i</p><p style="color: #f760ca;">e</p><p style="color: #39ed69;">g</p><p style="color: #ed3954;">o</p>
+        </a>
+    </div>
 </div>
