--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -14,6 +14,16 @@
     background-repeat: no-repeat;
     width: 200px;
     height: 100%;
+    cursor: pointer;
+}
+.header-options {
+    display: flex;
+    justify-content: space-between;
+    height: 70px;
+    background: linear-gradient(to left top, #1D1D1D, #1D1D1DF2, #1D1D1DDE);
+}
+.search-form {
+    display: flex;
 }
 form {
     display: flex;
@@ -45,6 +55,7 @@ form {
     right: 40px;
     width: 40px;
     height: 60%;
+    cursor: pointer;
 }
 .magnifying-glass {
     color: #000923;
@@ -60,6 +71,7 @@ form {
     width: 40px;
     border-radius: 50%;
     min-width: 40px;
+    cursor: pointer;
 }
 .login-btn:hover {
     background: #000923;
@@ -83,4 +95,66 @@ li {
     font-weight: bold;
     letter-spacing: 2px;
     border-radius: 10px;
+    cursor: pointer;
+}
+/* MOBILE VIEW */
+@media screen and (max-width: 820px) {
+    .header {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+    }
+    .img-container {
+        width: 100%;
+        height: 300px;
+    }
+    .header-options {
+        display: flex;
+        justify-content: center;
+        height: 70px;
+        background: linear-gradient(to left top, #1D1D1D, #1D1D1DF2, #1D1D1DDE);
+    }
+    .search-form {
+        display: flex;
+        width: 100%;
+        margin: 0;
+        gap: 10px;
+        justify-content: center;
+    }
+    form {
+        display: flex;
+        align-items: center;
+        width: 244px;
+        background: transparent;
+        margin-left: 20px;
+    }
+    .search-bar {
+        font-size: 20px;
+        width: 100%;
+        height: 60%;
+        padding-left: 15px;
+        padding-right: 50px;
+        border-radius: 100px;
+        border: none;
+        outline: none;
+        min-width: 244px;
+        box-sizing: border-box;
+    }
+    .search-btn {
+        background: radial-gradient(#ffee93, #eab941);
+        border-radius: 100px;
+        border: none;
+        position: relative;
+        right: 40px;
+        height: 42px;
+        min-width: 40px;
+    }
+    .login-btn-container {
+        display: flex;
+        margin-right: 5px;
+        background: transparent;
+    }
+    .nav {
+        justify-content: center;
+    }
 }
