--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -34,6 +34,7 @@ h1, h2, h3, h4 {
 }
 .category > h2 {
     box-shadow: 10px 6px 20px 0px rgba(0,0,0,0.18);
+    min-width: fit-content;
 }
 .category > ul > li {
     letter-spacing: 2px;
@@ -43,10 +44,12 @@ h1, h2, h3, h4 {
 #categorias-text {
     background: radial-gradient(#ffee93, #eab941);
     margin-bottom: 30px;
+    user-select: none;
 }
 #filtros-text {
     background: radial-gradient(#ffee93, #eab941);
     margin-top: 30px;
+    user-select: none;
 }
 #color-text {
     margin: 30px 0;
@@ -66,12 +69,23 @@ h1, h2, h3, h4 {
     width: 0%;
     padding-left: 10px;
 }
+#colores:hover {
+    font-weight: 600;
+    transition: 0.1s ease-out;
+}
+#categorias:hover {
+    font-weight: 600;
+    transition: 0.1s ease-out;
+}
 .color-swatch {
     display: flex;
     width: 20px;
     height: 20px;
     border: 1px solid #000;
     border-radius: 50px;
+}
+.cursor {
+    cursor: pointer;
 }
 .products-container {
     width: 80%;
@@ -89,10 +103,23 @@ h1, h2, h3, h4 {
     display: grid;
     align-self: end;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 .product-img {
     display: grid;
     align-self: end;
+    position: relative;
+}
+.layout {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.layout:hover {
+    transition: 0.2s ease-in-out;
+    background: rgba(0,0,0,0.5);
 }
 .product-details {
     padding: 20px;
@@ -202,4 +229,88 @@ input, select {
     margin: 10px 10px 0 10px;
     border: 1px solid #fff;
     padding: 0;
+}
+
+/* MOBILE VIEW */
+.filters-container {
+    display: none;
+}
+
+@media screen and (max-width: 820px) {
+    .category {
+        display: none;
+    }
+    .filters-container {
+        display: flex;
+        margin: 60px 0 30px 0;
+        justify-content: center;
+    }
+    .filters {
+        width: 234px;
+    }
+    .filters > button {
+        width: 100%;
+        height: 27px;
+        cursor: pointer;
+    }
+    .subcontainer {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .btn123 {
+        width: 234px;
+    }
+    .category {
+        flex-direction: column;
+        width: 100%;
+    }
+    .category > ul {
+        list-style: none;
+    }
+    #colores {
+        justify-content: center;
+    }
+    .products-container {
+        width: 100%;
+        justify-content: center;
+        padding: 0;
+        gap: 20px;
+    }
+    .products {
+        margin: 40px 0 0 0;
+    }
+    .subir-imagen {
+        align-items: center;
+        gap: 4px;
+        padding: 10px;
+    }
+    .subir-imagen > div > h2 {
+        font-size: 14px;
+    }
+    #imagen-label {
+        height: 60px;
+    }
+    .subir-imagen > label > img {
+        width: 60px;
+    }
+    .modal-add-btn {
+        align-self: center;
+        margin: 0 10px 10px 10px;
+    }
+    #categoria-add-btn {
+        margin: 10px;
+    }
+    #categoria-name-label {
+        text-align: center;
+    }
+    #color-name-label {
+        text-align: center;
+    }
+    #color-input {
+        margin: 10px auto 0;
+    }
+    #color-add-btn {
+        margin: 10px;
+    }
 }
