--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,5 +1,22 @@
 <app-header></app-header>
 <body>
+<div class="filters-container">
+    <div class="filters">
+        <button class="btn123" #filtersBtn>Filtros</button>
+        <div class="category">
+            <h2 id="categorias-text">CATEGORIAS</h2>
+            <ul *ngFor="let categoria of categorias" id="categorias" class="cursor">
+                <li (click)="filtrarRopaPorCategoria(categoria.id!)">{{categoria.nombre}}</li>
+            </ul>
+            <h2 id="filtros-text">FILTROS</h2>
+            <h4 id="color-text">COLOR</h4>
+            <ul id="colores" *ngFor="let color of colores" (click)="filtrarRopaPorColor(color.id!)" class="cursor">
+                <div class="color-swatch" [style.background-color]="color.hexadecimal"></div>
+                <li class="color-text">{{color.nombre}}</li>
+            </ul>
+        </div>
+    </div>
+</div>
 <div class="container">
   <div class="subcontainer">
       <div class="add-product">
@@ -19,12 +36,12 @@
 <div>
 <div class="category">
     <h2 id="categorias-text">CATEGORIAS</h2>
-    <ul *ngFor="let categoria of categorias">
+    <ul *ngFor="let categoria of categorias" id="categorias" class="cursor">
         <li (click)="filtrarRopaPorCategoria(categoria.id!)">{{categoria.nombre}}</li>
     </ul>
     <h2 id="filtros-text">FILTROS</h2>
     <h4 id="color-text">COLOR</h4>
-    <ul id="colores" *ngFor="let color of colores" (click)="filtrarRopaPorColor(color.id!)">
+    <ul id="colores" *ngFor="let color of colores" (click)="filtrarRopaPorColor(color.id!)" class="cursor">
         <div class="color-swatch" [style.background-color]="color.hexadecimal"></div>
         <li class="color-text">{{color.nombre}}</li>
     </ul>
@@ -32,7 +49,8 @@
 <div class="products-container">
       <div class="products" *ngFor="let product of products">
             <div class="product-img" routerLink="/details/{{product.id}}">
-                <img [src]="getImagenRopaNombre(products, product.id!)" width="200px">
+                <div class="layout"></div>
+                <img [src]="getImagenRopaNombre(products, product.id!)" width="150px">
             </div>
             <div class="product-details" routerLink="/details/{{product.id}}">
                 <h3>{{product.nombre}}</h3>
@@ -91,25 +109,25 @@
 <div class="modal-container" id="create-categoria-modal">
     <form class="modal" (ngSubmit)="createCategoria()">
         <div class="div-modal">
-            <label for="categoria-nombre">Nombre de la categoría</label>
+            <label for="categoria-nombre" id="categoria-name-label">Nombre de la categoría</label>
             <input type="text" id="categoria-nombre" name="categoriaNombre" [(ngModel)]="categoriaNombre">
         </div>
         <div class="div-modal">
-            <button class="modal-add-btn">Agregar categoría</button>
+            <button class="modal-add-btn" id="categoria-add-btn">Agregar categoría</button>
         </div>
     </form>
 </div>
 <div class="modal-container" id="create-color-modal">
     <form class="modal" (ngSubmit)="createColor()">
         <div class="div-modal">
-            <label for="color-nombre">Nombre del color</label>
+            <label for="color-nombre" id="color-name-label">Nombre del color</label>
             <input type="text" id="color-nombre" name="colorNombre" [(ngModel)]="colorNombre">
         </div>
         <div class="div-modal">
-            <input type="color" class="color">
+            <input type="color" class="color" id="color-input">
         </div>
         <div class="div-modal">
-            <button class="modal-add-btn">Agregar color</button>
+            <button class="modal-add-btn" id="color-add-btn">Agregar color</button>
         </div>
     </form>
 </div>
