--- a/src/app/components/search-results/search-results.component.css
+++ b/src/app/components/search-results/search-results.component.css
@@ -43,10 +43,12 @@ h1, h2, h3, h4 {
 #categorias-text {
     background: radial-gradient(#ffee93, #eab941);
     margin-bottom: 30px;
+    user-select: none;
 }
 #filtros-text {
     background: radial-gradient(#ffee93, #eab941);
     margin-top: 30px;
+    user-select: none;
 }
 #color-text {
     margin: 30px 0;
@@ -66,12 +68,23 @@ h1, h2, h3, h4 {
     width: 0%;
     padding-left: 10px;
 }
+#colores:hover {
+    font-weight: 600;
+    transition: 0.1s ease-out;
+}
+#categorias:hover {
+    font-weight: 600;
+    transition: 0.1s ease-out;
+}
 .color-swatch {
     display: flex;
     width: 20px;
     height: 20px;
     border: 1px solid #000;
     border-radius: 50px;
+}
+.cursor {
+    cursor: pointer;
 }
 .products-container {
     width: 80%;
@@ -89,10 +102,23 @@ h1, h2, h3, h4 {
     display: grid;
     align-self: end;
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 .product-img {
     display: grid;
     align-self: end;
+    position: relative;
+}
+.layout {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.layout:hover {
+    transition: 0.2s ease-in-out;
+    background: rgba(0,0,0,0.5);
 }
 .product-details {
     padding: 20px;
@@ -144,4 +170,22 @@ button {
 .no-results > i {
     font-size: 30px;
     width: 32px;
+}
+
+@media screen and (max-width: 820px) {
+    .title {
+        margin: 60px 0 0 0;
+    }
+    .category {
+        display: none;
+    }
+    .products-container {
+        width: 100%;
+        justify-content: center;
+        padding: 0;
+        gap: 20px;
+    }
+    .products {
+        margin: 40px 0 0 0;
+    }
 }
